feat: provide LSP API support
Signed-off-by: azerr <azerr@redhat.com>